<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp" >
		    <TextView
		        android:id="@+id/textView4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/instruction" />
		</LinearLayout>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/vcas_addr" />
	
	        <EditText
	            android:id="@+id/vcas_addr"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="20"
	            android:inputType="textUri" />
	
	        <Button
	            android:id="@+id/buttonVCASAddr"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/set_default" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/vcas_port" />
	
	        <EditText
	            android:id="@+id/vcas_port"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="20"
	            android:inputType="textUri" />
	
	        <Button
	            android:id="@+id/buttonVCASPort"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/set_default" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp"
	        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/buttonSetVCAS"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/set_vcas" />	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/video_uri" />
	
	        <EditText
	            android:id="@+id/video_uri"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="40"
	            android:inputType="textUri" />
	
	        <Button
	            android:id="@+id/buttonPlay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/play" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp"
	        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/buttonFileManager"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/file_manager" />
	    </LinearLayout>

    </LinearLayout>


</RelativeLayout>